--- a/worldshardestgame/index.html
+++ b/worldshardestgame/index.html
@@ -1,4 +1,6 @@
 <head>
   <title>World's Hardest Game</title>
-<script src="./player.js"></script>
 </head>
+<body>
+<iframe src="game.html" style="position: fixed; inset: 0px; outline: none; border: none; height: 100%; width: 100%; overflow: hidden;" scrolling="no"></iframe>
+</body>
