--- a/worldshardestgame/game.html
+++ b/worldshardestgame/game.html
@@ -1,6 +1,15 @@
 <head>
   <title>World's Hardest Game</title>
 <script src="./player.js"></script>
+<link rel="stylesheet" href="styles.css">
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    background-color: #f2f2f2;
+    padding: 10px;
+  }
+</style>
 </head>
 <body>
 <script>
