--- a/worldshardestgame/index.html
+++ b/worldshardestgame/index.html
@@ -1,6 +1,16 @@
 <head>
   <title>World's Hardest Game</title>
+<link rel="stylesheet" href="styles.css">
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    background-color: #f2f2f2;
+    padding: 10px;
+  }
+</style>
 </head>
 <body>
+<h2>World's Hardest Game</h2>
 <iframe src="game.html" style="position: fixed; inset: 0px; outline: none; border: none; height: 100%; width: 100%; overflow: hidden;" scrolling="no"></iframe>
 </body>
