--- a/worldshardestgame/index.html
+++ b/worldshardestgame/index.html
@@ -1,6 +1,8 @@
 <head>
-  <title>World's Hardest Game</title>
+  <title>World's Hardest Game | Derpman's Website</title>
+<script src="./player.js"></script>
 <link rel="stylesheet" href="styles.css">
+<link rel="icon" href="whg.png">
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -12,5 +14,7 @@
 </head>
 <body>
 <h2>World's Hardest Game</h2>
-<iframe src="game.html" style="position: fixed; inset: 0px; outline: none; border: none; height: 100%; width: 100%; overflow: hidden;" scrolling="no"></iframe>
+<div>
+<embed src="whg.swf" style="inset: 0px; outline: none; border: none; height: 90%; width: 100%; overflow: hidden;" scrolling="no"></embed>
+</div>
 </body>
