--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@ Eaglercraft 1.5
 <br>
 Run 3
 </a>
+<a href="worldshardestgame">
+<img src="img/whg.png" style="width:70px;height:75px;"></img>
+<br>
+World's Hardest Game
+</a>
 </div>
 <script src="search.js"></script>
 </body>
