--- a/worldshardestgame/index.html
+++ b/worldshardestgame/index.html
@@ -1,6 +1,6 @@
 <head>
   <title>World's Hardest Game | Derpman's Website</title>
-<script src="./player.js"></script>
+<script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
 <link rel="stylesheet" href="styles.css">
 <link rel="icon" href="whg.png">
 <style>
