--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Run 3
 <a href="worldshardestgame">
 <img src="img/whg.png" style="width:70px;height:75px;"></img>
 <br>
-World's Hardest Game
+WorldsHardestGame
 </a>
 </div>
 <script src="search.js"></script>
