--- a/eaglercraft-1-5/index.html
+++ b/eaglercraft-1-5/index.html
@@ -21,8 +21,8 @@
             worldsFolder: "MAIN",
             servers: [
               {
-                serverName: "Henry's Server",
-                serverAddress: "wss://eaglerlauncher.derpkiddo.repl.co",
+                serverName: "Derpman's Server (1.8)",
+                serverAddress: "wss://eaglerlauncher.derpmans.repl.co",
                 hideAddress: false,
               },
               {
