--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@ Run 3
 <br>
 HardestGame
 </a>
+<a href="eaglercraft-1-8">
+<img src="img/eaglercraft.png" style="width:75px;height:75px;"></img>
+<br>
+Eaglercraft 1.8
+</a>
 </div>
 <script src="search.js"></script>
 </body>
