--- a/slope/index.html
+++ b/slope/index.html
@@ -1,5 +1,6 @@
 <head>
-    <title>Slope</title>
+    <title>Slope | Derpman's website</title>
+    <link rel="icon" href="slope.png">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="TemplateData/unityloader41.js"></script>
