--- a/eaglercraft-1-8/index.html
+++ b/eaglercraft-1-8/index.html
@@ -24,7 +24,7 @@
             assetsURI: "assets.epk",
             localesURI: "lang/",
             servers: [
-              { addr: "wss://eaglerlauncher.derpkiddo.repl.co", name: "Henry's Server" },
+              { addr: "wss://eaglerlauncher.derpmans.repl.co", name: "Derpman's Server" },
               { addr: "wss://mc.asspixel.net", name: "AssPixel" },
               { addr: "wss://sus.shhnowisnottheti.me", name: "Ayunboom" },
               { addr: "wss://play/vanillacraftsmp.org", name: "VanillaCraft" }
