--- a/1v1/index.html
+++ b/1v1/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>1v1.LOL | Building Simulator, Battle Royale & Shooting Game</title>
+	<title>nigger</title></title>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async="" src="gtag/js.js?id=UA-118283086-6"></script>
 	<script src="js/googleAnalytics.js"></script>
