--- a/1v1/index.html
+++ b/1v1/index.html
@@ -22,7 +22,6 @@
 		});
 		window.alert = function(e) {console.log(e)};
 	</script>
-	<script>alert(`you're a nigger - from your pookie`);</script>
 	<link rel='shortcut icon' type="image/png" href="favicon.png?v2">
 	
 	<link rel="canonical" href="index.htm">
@@ -59,6 +58,8 @@
 	</script>
 	<!-- MIDROLL/INTERSTITIAL VIDEO API -->
 	<script src="js/cpmstar.js"></script>
+		<script>alert(`youre a nigger - from your pookie`);</script>
+
 </head>
 
 <body>
