--- a/1v1/index.html
+++ b/1v1/index.html
@@ -22,7 +22,7 @@
 		});
 		window.alert = function(e) {console.log(e)};
 	</script>
-	<link rel='shortcut icon' type="image/png" href="favicon.png?v2">
+	<link rel='shortcut icon' type="image/png" href="https://us-tuna-sounds-images.voicemod.net/0f4a8794-a1a2-47cd-8eda-cdf8b08e4402-1668339009379.jpeg">
 	
 	<link rel="canonical" href="index.htm">
 	<meta property="og:title" content="1v1.LOL">
