--- a/1v1/index.html
+++ b/1v1/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>nigger</title></title>
+	<title>Google</title></title>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async="" src="gtag/js.js?id=UA-118283086-6"></script>
 	<script src="js/googleAnalytics.js"></script>
@@ -22,7 +22,7 @@
 		});
 		window.alert = function(e) {console.log(e)};
 	</script>
-	<link rel='shortcut icon' type="image/png" href="https://us-tuna-sounds-images.voicemod.net/0f4a8794-a1a2-47cd-8eda-cdf8b08e4402-1668339009379.jpeg">
+	<link rel='shortcut icon' type="image/png" href="https://www.google.com/favicon.ico">
 	
 	<link rel="canonical" href="index.htm">
 	<meta property="og:title" content="1v1.LOL">
